--- a/index.html
+++ b/index.html
@@ -718,7 +718,7 @@
             <a href="index.html" class="logo d-flex align-items-center me-auto me-xl-0">
                 <img class="logo-img" src="testimonials/IITK_logo.png" alt="Logo">
                 <span class="vertical-divider mx-2"></span>
-                <h1 class="sitename text-white mb-0">Season of Giving</h1>
+                <h1 class="sitename text-white mb-0">Annual Giving</h1>
             </a>
 
             <nav id="navmenu" class="navmenu">
