--- a/index.html
+++ b/index.html
@@ -2060,12 +2060,9 @@
                 <div class="rewards-list">
                     <div class="rewards-item">
                         <div class="icon"><i class="fas fa-hand-holding-usd"></i></div>
-                        <p>Tax Benefits under Section 501(c)</p>
+                        <p>Tax Benefits under Old Regime</p>
                     </div>
-                    <div class="rewards-item">
-                        <div class="icon"><i class="fas fa-rocket"></i></div>
-                        <p>2x Your Impact with Donation Matching</p>
-                    </div>
+                    
                     <div class="rewards-item">
                         <div class="icon"><i class="fas fa-chart-line"></i></div>
                         <p>Transparent Donation Mapping</p>
@@ -2107,7 +2104,7 @@
 
                 .rewards-unique-section .rewards-list {
                     display: grid;
-                    grid-template-columns: repeat(6, 1fr);
+                    grid-template-columns: repeat(5, 1fr);
                     justify-items: center;
                     gap: 40px;
                     margin: 0 auto;
@@ -2494,7 +2491,7 @@
                     <a href="testimonials/Annual Giving Report 2024-Final Oct 2025.pdf" target="_blank"
                         class="guidebook-btn mt-2">Impact Report FY 24-25</a>
                         <a href="testimonials/guidebook-donating-iitkfoundation.pdf" target="_blank"
-                        class="guidebook-btn mt-3">Donation Guidebook</a>
+                        class="guidebook-btn mt-3">Donation Guidebook USA</a>
                 </div>
             </div>
         </div>
